Smart Lock: Dynamically stop and start according to Bluetooth power changes.

Though UnlockManager listens to Bluetooth power events, it previously did not
communicate those events to lower objects, such as RemoteDeviceLifeCycle. This
caused crbug.com/889641: RemoteDeviceLifeCycle attempted to begin a connection
to the host device without first checking if Bluetooth was present or powered,
and because Bluetooth is briefly not present on wake after the laptop lid is
closed, RemoteDeviceLifeCycle would always fail.

An alternate approach to this issue might have been to place Bluetooth
listening logic inside RemoteDeviceLifeCycle, but UnlockManager is already
a complex state machine that handles several events including Bluetooth
power -- it's cleaner and easier to follow if state changes remain in this
one class.

Bug: 889641
Change-Id: I2c80da4c4e965b6fc11a0c70230705824dc34dbe
Reviewed-on: https://chromium-review.googlesource.com/1252369
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Commit-Queue: Ryan Hansberry <hansberry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595241}
Former-commit-id: c5aaf4437cb5055dacced526335af4c85d1ba1cf